--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,10 @@ body{font-family: "Note sans KR", sans-serif !important; margin: 0;}
 
 .company span{position: absolute; left:550px; margin-top: 300px; }
 .company span.company_main{display: block; text-align: center; color: #ff6633; font-size: 36px;}
+
+
+#container_end{width: 100%;}
+#content_end {width: 100%; background-color: #003366;}
+.content_end_area {width: 90%; height: 300px; text-align:left; margin-left: auto; margin-top: 0; margin-bottom: 0; margin-right: auto;}
+.content_end_area p{text-align:left; color: white; font-size: 14px; padding-top: 45px; padding-bottom: 35px;}
+.content_end_area img{width: 65px; height: 65px;}
